
[package]
name = "mdpdf"
version = "0.1.2"
edition = "2024"
include = ["src/**/*","fonts/*","README.md","LICENSE"]
license = "MIT"
keywords = ["pdf", "markdown", "node.js"]
description = "Convert Markdown to PDF using a self-contained binary"
repository = "http://github.com/westrik/mdpdf"

[lib]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "mdpdf"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
fuzz = []
cli = []
node = ["napi","napi-derive","napi-build"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
typst = "0.13.0"
typst-pdf = "0.13.0"
pulldown-cmark = "0.13"
serde_json = "1.0"
anyhow = "1.0"
comemo = "0.4"
once_cell = "1.19"
image = "0.24"
base64 = "0.21"
url = "2.5"
tempfile = "3.8"
html-escape = "0.2"
html_parser = "0.7"

[dependencies.napi]
version = "3.1"
default-features = false
features = ["napi9", "async"]
optional = true

[dependencies.napi-derive]
version = "3.1"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1.0"
default-features = false
features = ["rt-multi-thread","macros","fs"]

[dependencies.clap]
version = "4.0"
features = ["derive"]

[build-dependencies.napi-build]
version = "2.2"
optional = true

[dev-dependencies.napi]
version = "3.1"
features = ["napi9", "async"]
